fix jumping scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,13 @@
     font-family: "Source Serif Pro", sans-serif;
 }
 
+@media screen and (min-width: 960px) {
+    html {
+        margin-left: calc(100vw - 100%);
+        margin-right: 0;
+    }
+}
+
 img {
     width: 100%;
 }
